alterei a cor do texto2

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <br>
             <div id="img2" style="background-color: darkgoldenrod; width: 400px; height: 300px; margin: auto;"></div>
             <br>
-            <div id="texto2" style="background-color: chocolate; width: 700px; height: 150px; margin: auto;"></div>
+            <div id="texto2" style="background-color: rgb(126, 210, 30); width: 700px; height: 150px; margin: auto;"></div>
         </section>
 
         <br>
